[CHORE] Fixes grunt tasks
Signed-off-by: Alex Roth <alex@coschedule.com>

--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -1,1 +1,7 @@
+<div id="header">
+	<h1>Crossover</h1>
+	<h2>a game about rediculous pairings</h2>
+</div>
 {{outlet}}
+<div class="footer">
+</div>
