adds dashboard template and route
Signed-off-by: Brian Nelson <yonbeastie@gmail.com>

--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -1,6 +1,6 @@
 <div id="header">
 	<h1>Crossover</h1>
-	<h2>a game about rediculous pairings</h2>
+	<h2>a game about ridiculous pairings</h2>
 </div>
 {{outlet}}
 <div class="footer">
