--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -1,7 +1,34 @@
-<div id="header">
-	<h1>Crossover</h1>
-	<h2>a game about ridiculous pairings</h2>
+<div id="container">
+	<div id="sidebar">
+		<div class="spacer">
+			<h1>Stats</h1>
+			<h2>Basic</h2>
+			<ul>
+				<li>{{money}}</li>
+				<li>{{outflow}}</li>
+				<li>{{level}}</li>
+			</ul>
+			<h2>Followers</h2>
+			<ul>
+				<li>{{facespace}}</li>
+				<li>{{tweetbook}}</li>
+				<li>{{wumbler}}</li>
+			</ul>
+		</div>
+	</div>
+	<div id="content">
+		<header>
+			<div class="logo">
+				<h1>Crossover</h1>
+			</div>
+			<div class="stats">
+				<h2>{{date}}</h2>
+			</div>
+		</header>
+		<div class="spacer">
+			{{outlet}}
+		</div>
+	</div>
 </div>
-{{outlet}}
 <div class="footer">
 </div>
