--- a/src/templates/dashboard.hbs
+++ b/src/templates/dashboard.hbs
@@ -1,6 +1,7 @@
 <h2>Dashboard</h2>
 
-<div class="dashboard-section stories">
+
+{{#view App.StoriesView class="dashboard-section stories"}}
     <h2>Stories</h2>
     <h4>Stories in Progress</h4>
 
@@ -13,7 +14,7 @@
     <div>
         {{#link-to "newStory" class="btn btn-xlarge"}}Add New Story{{/link-to}}
     </div>
-</div>
+{{/view}}
 
 <div class="dashboard-section team">
     <h2>Team</h2>
