[CHORE] adds hiring route, template, and controller; adds handlebars helper library
Signed-off-by: Brian Nelson <yonbeastie@gmail.com>

--- a/src/templates/dashboard.hbs
+++ b/src/templates/dashboard.hbs
@@ -1,7 +1,7 @@
 <h2>Dashboard</h2>
 
 
-{{#view App.StoriesView class="dashboard-section stories"}}
+<div class="dashboard-section stories">
     <h2>Stories</h2>
     <h4>Stories in Progress</h4>
 
@@ -14,7 +14,7 @@
     <div>
         {{#link-to "newStory" class="btn btn-xlarge"}}Add New Story{{/link-to}}
     </div>
-{{/view}}
+</div>
 
 <div class="dashboard-section team">
     <h2>Team</h2>
