--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -1,6 +1,9 @@
 <div id="container">
 	<div id="sidebar">
 		<div class="spacer">
+			<div class="logo">
+				<h1>Crossover</h1>
+			</div>
 			<h1>Stats</h1>
 			<h2>Basic</h2>
 			<ul>
@@ -8,19 +11,16 @@
 				<li>{{outflow}}</li>
 				<li>{{level}}</li>
 			</ul>
-			<h2>Followers</h2>
+			<h2>{{total}} Followers</h2>
 			<ul>
-				<li>{{facespace}}</li>
-				<li>{{tweetbook}}</li>
-				<li>{{wumbler}}</li>
+				<li>FS: {{facespace}}</li>
+				<li>TB: {{tweetbook}}</li>
+				<li>W: {{wumbler}}</li>
 			</ul>
 		</div>
 	</div>
 	<div id="content">
 		<header>
-			<div class="logo">
-				<h1>Crossover</h1>
-			</div>
 			<div class="stats">
 				<h2>{{date}}</h2>
 			</div>
