--- a/src/public/global.css
+++ b/src/public/global.css
@@ -96,13 +96,20 @@ a.btn {
 	font-size: 18px;
 	display: inline-block;
 	text-align: center;
+	text-decoration: none;
 }
 
 a.btn:hover {
 	background: #ffffff;
 	color: #ff7d7d;
 	box-shadow: none;
-	border: 3px solid #ff7d7d;
+}
+
+a.btn.disabled {
+	background: rgba(169,169,169,.5);
+	color: rgba(255,255,255,0.25);
+	border: 3px solid transparent;
+	box-shadow: none;
 }
 
 a.btn.btn-xlarge {
@@ -111,7 +118,16 @@ a.btn.btn-xlarge {
 	margin-left: auto;
 	margin-right: auto;
 	padding: 20px;
-	text-decoration: none;
+}
+a.btn.btn-cancel {
+	color: #ffa6a6;
+	background: #ffffff;
+	border: 3px solid #ffa6a6;
+}
+
+a.btn.btn-cancel:hover {
+	color: #ff7d7d;
+	border: 3px solid #ff7d7d;
 }
 
 .dashboard-section {
@@ -236,3 +252,41 @@ td.icon > div.icon {
 	height: 25vh;
 	margin-bottom: 25px;
 }
+
+/* Hire Employees */
+
+.hire-employee.employee {
+	margin: 10px 0px;
+	padding: 10px 0px;
+	width: 100%;
+	height: 50vh;
+	overflow: scroll;
+}
+
+.hire-employee.employee > table {
+	height: 100%;
+	width: 100%;
+}
+
+.hire-employee.container {
+	width: 50%;
+	margin: 00 auto;
+	overflow: hidden;
+	height: 50vh;
+}
+
+.hire-employee.icon {
+	width: 25vh;
+	height: 25vh;
+	max-width: 250px;
+	max-height: 250px;
+}
+
+.hire-employee.icon .icon {
+	width: 25vh;
+	height: 25vh;
+	max-width: 250px;
+	max-height: 250px;
+}
+
+
