--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -21,7 +21,7 @@
 			<ul>
 				<li>Rent: ${{cents_to_dollars office.cost_of_rent}}</li>
 				<li>Employees: {{office.employees.length}}</li>
-				<li>Capacity: {{office.level}}</li>
+				<li>Capacity: {{office.capacity}}</li>
 				<li><a href="#" {{action "upgrade" target="office"}}>Upgrade Office</a></li>
 				<li><a href="#" {{action "downgrade" target="office"}}>Downgrade Office</a></li>
 			</ul>
