--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -7,9 +7,8 @@
 			<h1>Stats</h1>
 			<h2>Basic</h2>
 			<ul>
-				<li>${{cents_to_dollars office.money_incoming}} per week</li>
-				<li>${{cents_to_dollars office.money_outgoing}} per week</li>
-				<li>{{office.level}}</li>
+				<li>Proceeds: ${{cents_to_dollars office.money_incoming}} per week</li>
+				<li>Expenses: ${{cents_to_dollars office.money_outgoing}} per week</li>
 			</ul>
 			<h2>{{followers_total}} Followers</h2>
 			<ul>
