--- a/src/templates/dashboard.hbs
+++ b/src/templates/dashboard.hbs
@@ -40,6 +40,9 @@
                 <h5>{{employee.name}}</h5>
                 <h6>{{employee.rank}}</h6>
             </td>
+            <td class="opts">
+                <a href='#' {{action 'assign_techie' employee target='controller'}} class="btn btn-small">✗ Make Techie</a>
+            </td>
             {{#unless employee.you}}
             <td class="opts">
                     <a href='#' {{action 'fire' employee target='controller'}} class="btn btn-small btn-red aj-fire-button">✗ Fire</a>
