add calculations for website uptime
Signed-off-by: Brian Nelson <yonbeastie@gmail.com>

--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -22,6 +22,7 @@
 				<li>Employees: {{office.employees.length}}</li>
 				<li>Capacity: {{office.capacity}}</li>
 				<li>Current Techie: {{#if office.techie}}{{office.techie.name}}{{else}}Nobody assigned!{{/if}}</li>
+				<li>Website Uptime: {{office.website_uptime}}</li>
 				<li><a href="#" {{action "upgrade" target="office"}}>Upgrade Office</a></li>
 				<li><a href="#" {{action "downgrade" target="office"}}>Downgrade Office</a></li>
 			</ul>
