Bug Fix, More Worlds, less debuggers.

--- a/src/templates/newStory.hbs
+++ b/src/templates/newStory.hbs
@@ -135,4 +135,4 @@ New Story!<br>
 
 {{/with}}
 
-{{#if showCreateButton}} <button> DO IT!</button>{{/if}}
+{{#if showCreateButton}} <button {{action "makeStory"}}> DO IT!</button>{{/if}}
