adds new hiring candidates every week
Signed-off-by: Brian Nelson <yonbeastie@gmail.com>

--- a/src/templates/dashboard.hbs
+++ b/src/templates/dashboard.hbs
@@ -38,17 +38,20 @@
             </td>
             <td class="name">
                 <h5>{{employee.name}}</h5>
-                <h6>{{employee.rank}} {{#if employee.techie}}(Techie){{/if}}</h6>
+                <h6>{{employee.rank}}
+                    {{#if employee.busy}}(Busy){{/if}}
+                    {{#if employee.techie}}(Techie) <a href="#" {{action 'unassign_techie' employee target="controller"}}>Unassign</a>{{/if}}
+                </h6>
             </td>
             {{#unless employee.you}}
                 {{#unless employee.busy}}
                 <td class="opts">
                     <a href='#' {{action 'assign_techie' employee target='controller'}} class="btn btn-small">✗ Make Techie</a>
                 </td>
-                {{/unless}}
                 <td class="opts">
                         <a href='#' {{action 'fire' employee target='controller'}} class="btn btn-small btn-red aj-fire-button">✗ Fire</a>
                 </td>
+                {{/unless}}
             {{/unless}}
             </tr>
             </table>
