adds bank balance and weekly deductions and daily income
Signed-off-by: Brian Nelson <yonbeastie@gmail.com>

--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -7,6 +7,7 @@
 			<h1>Stats</h1>
 			<h2>Basic</h2>
 			<ul>
+				<li>Bank: ${{cents_to_dollars office.bank}}</li>
 				<li>Proceeds: ${{cents_to_dollars office.money_incoming}} per week</li>
 				<li>Expenses: ${{cents_to_dollars office.money_outgoing}} per week</li>
 			</ul>
