--- a/src/public/global.css
+++ b/src/public/global.css
@@ -342,13 +342,6 @@ td.icon > div.icon {
 	color: #ffffff;
 }
 
-.team-choices{
-
-}
-.team-choice {
-	width: 10vw;
-	height:64px;
-}
 .team-hover {
 
 }
@@ -366,12 +359,19 @@ td.icon > div.icon {
 }
 
 .new-story input[type=text] {
-	width: 80%;
-	font-size: 28px;
+	width: 83%;
+	font-size: 25px;
 	border: 5px solid #ff9d7d;
-	padding: 20px 15px;
+	padding: 20px 1%;
 	border-radius: 20px;
 	outline: none;
+	margin: 25px auto;
+}
+
+
+.new-story h3 {
+	margin-top: 25px;
+	margin-bottom: 5px;
 }
 
 .role-choice.selected{
@@ -388,7 +388,7 @@ div.role-choice.selected > a.btn.remove-btn {
 }
 
 .new-story.choice-container {
-	width: 80%;
+	width: 85%;
 	margin-top: 20px;
 }
 
@@ -396,4 +396,45 @@ div.role-choice.selected > a.btn.remove-btn {
 	width: 50%;
 }
 
-.new-story.
+.team-list {
+	list-style: none;
+	padding-left: 0px;
+	margin: 0px;
+	border: 1px solid #ff9d7d;
+	overflow: scroll;
+	max-height: 50vh;
+}
+
+.team-list.employee {
+	list-style: none;
+	padding-left: 0px;
+	margin: 0px;
+	display: block;
+	padding: 10px 15px;
+	padding-right: -2px;
+	border: 1px solid #ff9d7d;
+	background: #ffffff;
+}
+
+.team-list-employee-stats > h5 {
+	font-size: 14px;
+	border-bottom: 1px solid #ff9d7d;
+	display: block;
+	margin: 0px;
+	padding: 0px;
+}
+
+.team-list-employee-stats > span.stat {
+	display: inline-block;
+	margin-right: 15px;
+	margin-left: 5px;
+}
+
+.team-list.employee.busy {
+	background: rgba(168,168,168,0.25);
+}
+
+.btn-create{
+	margin-top: 50px;
+	width: 100%;
+}
