--- a/src/templates/dashboard.hbs
+++ b/src/templates/dashboard.hbs
@@ -45,10 +45,8 @@
             {{#unless employee.you}}
                 {{#unless employee.busy}}
                 <td class="opts">
-                    <a href='#' {{action 'assign_techie' employee target='controller'}} class="btn btn-small">✗ Make Techie</a>
-                </td>
-                <td class="opts">
-                        <a href='#' {{action 'fire' employee target='controller'}} class="btn btn-small btn-red aj-fire-button">✗ Fire</a>
+                    <a href='#' {{action 'assign_techie' employee target='controller'}} class="btn btn-small aj-techie-button">Make Techie</a>
+                    <a href='#' {{action 'fire' employee target='controller'}} class="btn btn-small btn-red aj-fire-button">✗ Fire</a>
                 </td>
                 {{/unless}}
             {{/unless}}
