Creating a Story is maybe done???!?!!!!

--- a/src/templates/newStory.hbs
+++ b/src/templates/newStory.hbs
@@ -105,5 +105,5 @@
 
 {{/with}}
 
-{{#if showCreateButton}} <button> DO IT!</button>{{/if}}
+{{#if showCreateButton}} <button {{action "createStory"}}> DO IT!</button>{{/if}}
 </div>
