[FEATURE] Adds page view graph
Signed-off-by: Alex Roth <alex@coschedule.com>

--- a/src/templates/dashboard.hbs
+++ b/src/templates/dashboard.hbs
@@ -92,8 +92,8 @@
 
 <div class="dashboard-section pageviews">
     <h2>Website Stats</h2>
-    <p>Pageviews: {{model.stats.pageviews}}</p>
-    <canvas width="300" height="150">
+    <p>Pageviews: {{controllers.app._views}}</p>
+    <canvas id="dashboard-canv" width="500" height="250">
         Your browser doesn't support canvas which means you probably can't see this page anyway. I could say whatever I want about you. Your mother was a hamster and your father smells of elderberries
     </canvas>
 </div>
