--- a/src/templates/history.hbs
+++ b/src/templates/history.hbs
@@ -1,9 +1,22 @@
-{{#link-to 'dashboard' class="btn"}}
-    &laquo;&nbsp;Back to Dashboard
-{{/link-to}}
+<div class='page story-history'>
+	{{#link-to 'dashboard' class="btn"}}
+	    &laquo;&nbsp;Back to Dashboard
+	{{/link-to}}
 
-<ul>
-{{#each story in model}}
-    <li>{{story.title}} - {{story.world1.name}} x {{story.world2.name}} {{#link-to 'viewStory' story}}view{{/link-to}}</li>
-{{/each}}
-</ul>
+	<ul>
+	{{#each story in model}}
+	    <li>
+	    <table>
+	    <tr>
+	    <td>
+	    <h4>{{story.title}}</h4><h5>{{story.world1.name}} x {{story.world2.name}}</h5>
+	    </td>
+	    <td class="story-history opts">
+	    {{#link-to 'viewStory' story class="btn btn-view-story"}}view{{/link-to}}
+	    </td>
+	    </tr>
+	    </table>
+	    </li>
+	{{/each}}
+	</ul>
+</div>
