--- a/src/templates/viewStory.hbs
+++ b/src/templates/viewStory.hbs
@@ -1,13 +1,16 @@
-{{#link-to 'dashboard' class="btn"}}
-    &laquo;&nbsp;Back to Dashboard
-{{/link-to}}
+<div class='page view-story'>
+	{{#link-to 'dashboard' class="btn"}}
+	    &laquo;&nbsp;Back to Dashboard
+	{{/link-to}}
 
-{{#link-to 'history' class="btn"}}
-    &laquo;&nbsp;Back to History
-{{/link-to}}
+	<h3>{{model.title}}</h3>
+	<h5>{{model.world1.name}} x {{model.world2.name}}</h5>
+	<h6>{{model.genre}}</h6>
 
-<h3>{{model.title}}</h3>
-<h5>{{model.world1.name}} x {{model.world2.name}}</h5>
-<h6>{{model.genre}}</h6>
+	<p>{{model.synopsis}}</p>
 
-<p>{{model.synopsis}}</p>
+
+	{{#link-to 'history' class="btn"}}
+	    &laquo;&nbsp;Back to History
+	{{/link-to}}
+</div>
