--- a/src/public/global.css
+++ b/src/public/global.css
@@ -556,3 +556,16 @@ a.btn.btn-finish {
 	min-width: 0px;
 	margin: 0px;
 }
+
+a.btn.btn-float-right {
+	margin: 0px;
+	float: right;
+	background: transparent;
+	border: 3px solid transparent;
+	box-shadow: none;
+	color: #ff9d7d;
+}
+
+a.btn.btn-float-right:hover {
+	text-shadow: 0px 2px rgba(255, 190, 125, 0.25);
+}
