Followers and shit.

--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -11,7 +11,7 @@
 				<li>Proceeds: ${{cents_to_dollars office.money_incoming}} per week</li>
 				<li>Expenses: ${{cents_to_dollars office.money_outgoing}} per week</li>
 			</ul>
-			<h2>{{followers_total}} Followers</h2>
+			<h2>{{followers_total}} Followers {{office.followers}}</h2>
 			<ul>
 				<li>FS: {{followers_facespace}}</li>
 				<li>TB: {{followers_tweetbook}}</li>
