--- a/src/public/global.css
+++ b/src/public/global.css
@@ -517,7 +517,8 @@ a.btn.btn-finish {
 	border: 1px solid #ff9d7d;
 	background: #ffffff;
 	max-height: 50vh;
-	overflow: scroll hidden;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .page.story-history > ul > li {
@@ -525,6 +526,7 @@ a.btn.btn-finish {
 	display: block;
 	width: 100%;
 	border: 1px solid #ff9d7d;
+	padding-right: -2px;
 }
 
 .page.story-history table {
@@ -568,4 +570,22 @@ a.btn.btn-float-right {
 
 a.btn.btn-float-right:hover {
 	text-shadow: 0px 2px rgba(255, 190, 125, 0.25);
+}
+
+@media screen and (max-width: 1400px){
+	.page.view-story > a.btn, .page.story-history > a.btn {
+		display: block;
+		width: 50%;
+		font-size: 24px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.world-choice {
+		padding: 10px 25px;
+	}
+
+	.hire-employee.info > a.btn {
+		margin-top: 5px !important;
+	}
 }
