--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -5,25 +5,18 @@
 				<h1>Crossover</h1>
 			</div>
 			<h1>Stats</h1>
-			<h2>Basic</h2>
+			<h2>Bank: ${{cents_to_dollars office.bank}}</h2>
 			<ul>
-				<li>Bank: ${{cents_to_dollars office.bank}}</li>
-				<li>Proceeds: ${{cents_to_dollars office.money_incoming}} per week</li>
-				<li>Expenses: ${{cents_to_dollars office.money_outgoing}} per week</li>
+				<li>+ ${{cents_to_dollars office.money_incoming}} / day</li>
+				<li>- ${{cents_to_dollars office.money_outgoing}} / week</li>
 			</ul>
 			<h2>{{office.followers}} Followers</h2>
-			<ul>
-				<li>FS: {{followers_facespace}}</li>
-				<li>TB: {{followers_tweetbook}}</li>
-				<li>W: {{followers_wumbler}}</li>
-			</ul>
 			<h2>Office</h2>
 			<ul>
 				<li>Rent: ${{cents_to_dollars office.cost_of_rent}}</li>
 				<li>Employees: {{office.employees.length}}</li>
 				<li>Capacity: {{office.capacity}}</li>
 				<li>Current Techie: {{#if office.techie}}{{office.techie.name}}{{else}}Nobody assigned!{{/if}}</li>
-				<li>Website Uptime: {{office.website_uptime}}</li>
 				<li><a href="#" {{action "upgrade" target="office"}}>Upgrade Office</a></li>
 				<li><a href="#" {{action "downgrade" target="office"}}>Downgrade Office</a></li>
 			</ul>
